<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vplan</string>
    <string name="settings">Settings</string>
    <string name="reload">Refresh</string>
    <string name="vplan">Timetable Changes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="credentials">Credentials</string>
    <string name="fill_out">No field may be left empty!</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="request_error">Request Error</string>
    <string name="request_error_detailed">There was an error while requesting a timetable change from the server. You might want to check your internet connection and your credentials.</string>
    <string name="ok">OK</string>
    <string name="no_connection">No Connection</string>
    <string name="no_connection_detailed">For using this app, an internet connection is needed.</string>
    <string name="about">About</string>
    <string name="source_code"><a href="https://github.com/fschillerg/vplan-android">Source Code</a></string>
    <string name="license"><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0</a></string>
    <string name="libraries">Libraries</string>
    <string name="show_libraries">Open Source Libraries</string>
    <string name="notification_title">New Timetable Changes</string>
    <string name="notification_description">There are new changes out!</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_error_description">There was an error fetching timetable changes!</string>
    <string name="information">Information</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="lesson">Lesson</string>
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="info">Info</string>
    <string name="form">Form</string>
    <string name="add">Add</string>
    <string name="notifications">Notifications</string>
    <string name="grade">Grade</string>
    <string name="added">Added</string>
    <string name="add_form">Add form</string>
    <string name="remove">Remove</string>
    <string name="custom">Custom</string>
    <string name="custom_no_empty">Please enter a form!</string>
    <string name="settings_credentials_description">Update your credentials</string>
    <string name="settings_notifications_description">Set up notifications</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add_teacher">Add teacher</string>
    <string name="filters_list_description">Filters for which you will receive notifications</string>
    <string name="teacher_no_empty">Please enter a name!</string>
</resources>
